# matrix

./: .gitignore
gpu/: cuda_array.cpp  cuda_array.h  dev_array.cpp  dev_array.h  dev_array.tpp  gpu.sln  gpu.vcxproj  kernel.cu  kernel.h  ops.cpp  ops.h
matrix/: Cargo.toml
matrix/gpu/: gpu.exp  gpu.lib
matrix/lib_gpu/: lib_gpu.lib  ops.h  test.cpp
matrix/src/: lib.rs  matrix.rs
