[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "matrix"
path = "src/lib.rs"

[[bin]]
name = "driver"
path = "src/bin/driver.rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"